tests/specs/ecosystem/dynamic/html/0_0_0.test
dynamic/html/0.0.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@dynamic/core@^0.0.0": "jsr:@dynamic/core@0.0.0"
    },
    "jsr": {
      "@dynamic/core@0.0.0": {
        "integrity": "30127ce58c58fb584eed0a655eafe1e3eeb66a46fa0d5f144eac4161c96d960d"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
 */ type CreateParams<T extends HTMLElementTagNameMap[keyof HTMLElementTagNameMap]> = {
                                ~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:7:33

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
 */ type CreateParams<T extends HTMLElementTagNameMap[keyof HTMLElementTagNameMap]> = {
                                                            ~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:7:61

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
    at file://<tmpdir>/mod.ts:10:47

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
    at file://<tmpdir>/mod.ts:10:101

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
    at file://<tmpdir>/mod.ts:10:129

Found 5 errors.

error: Type checking failed.

